# agentic-generator

./: .gitignore  PLAN_MASTRA_CONVERSION.md  README.md  agentO.ttl  package-lock.json  pyproject.toml  report_langgraph_milestone.md  report_milestone5.md  requirements.txt  run_results.txt  runner.py  test.py  test_email_workflow.py  validate_projects.py
kg_to_script/: pyproject.toml
kg_to_script/evaluation/: __init__.py  config.py  interop_run.py  pairing.py  run.py  schemas.py  utils.py
kg_to_script/evaluation/extractors/: __init__.py  code_extractor.py  kg_extractor.py
kg_to_script/evaluation/metrics/: ast_similarity.py  dry_run.py  oec.py  wgi.py
kg_to_script/evaluation/reports/: __init__.py  markdown_report.py
kg_to_script/evaluation_reports/: oec_wgi_results.json
kg_to_script/evaluation_reports/autogen/: oec_wgi_results.json
kg_to_script/evaluation_reports/crewai/: oec_wgi_results.json
kg_to_script/evaluation_reports/langgraph/: oec_wgi_results.json
kg_to_script/evaluation_reports/mastra/: oec_wgi_results.json
kg_to_script/generated_projects/output_autogen/L1_Multi-Agent_Conversation_and_Stand-up_Comedy/: main.py
kg_to_script/generated_projects/output_autogen/L2_Sequential_Chats_and_Customer_Onboarding/: main.py
kg_to_script/generated_projects/output_autogen/L4_Tool_Use_and_Conversational_Chess/: team.py
kg_to_script/generated_projects/output_autogen/L5_Coding_and_Financial_Analysis/: main.py
kg_to_script/generated_projects/output_autogen/L6-Planning_and_Stock_Report_Generation/: main.py
kg_to_script/generated_projects/output_crewai/game-builder-crew/: crew.py
kg_to_script/generated_projects/output_crewai/industry-agents/: pyproject.toml
kg_to_script/generated_projects/output_crewai/job-posting/: .env.example  crew.py
kg_to_script/generated_projects/output_crewai/landing_page_generator/: .env.example  pyproject.toml
kg_to_script/generated_projects/output_crewai/markdown_validator/: crew.py
kg_to_script/generated_projects/output_crewai/marketing_strategy/: crew.py
kg_to_script/generated_projects/output_crewai/prep-for-a-meeting/: pyproject.toml
kg_to_script/generated_projects/output_crewai/recruitment/: crew.py  pyproject.toml
kg_to_script/generated_projects/output_crewai/screenplay_writer/: .env.example  crew.py
kg_to_script/generated_projects/output_crewai/stock_analysis/: .env.example  pyproject.toml
kg_to_script/generated_projects/output_crewai/surprise_trip/: pyproject.toml
kg_to_script/generated_projects/output_crewai/trip_planner/: .env.example
kg_to_script/generated_projects/output_langgraph/chat-agent/: index.ts  manifest.json
kg_to_script/generated_projects/output_langgraph/email-agent/: manifest.json
kg_to_script/generated_projects/output_langgraph/open-code/: manifest.json
kg_to_script/generated_projects/output_langgraph/pizza-orderer/: index.ts  manifest.json
kg_to_script/generated_projects/output_langgraph/stockbroker/: index.ts  manifest.json
kg_to_script/generated_projects/output_langgraph/supervisor/: manifest.json  types.ts
kg_to_script/generated_projects/output_langgraph/trip-planner/: manifest.json
kg_to_script/generated_projects/output_langgraph/writer-agent/: manifest.json
kg_to_script/generated_projects/output_mastra/a2a/: README.md  package-lock.json  package.json
kg_to_script/generated_projects/output_mastra/agent/: README.md
kg_to_script/generated_projects/output_mastra/agui/: package.json
kg_to_script/generated_projects/output_mastra/ai-sdk-useChat/: README.md  package.json
kg_to_script/generated_projects/output_mastra/ai-sdk-v5/: README.md  package.json
kg_to_script/generated_projects/output_mastra/bird-checker-with-express/: README.md  package.json
kg_to_script/generated_projects/output_mastra/bird-checker-with-nextjs-and-eval/: README.md
kg_to_script/generated_projects/output_mastra/client-side-tools/: package.json
kg_to_script/src/core/: models.py
kg_to_script/tests/: test_extractor.py
output_files/output_crewai/trip_planner/: crew.py  main.py  pyproject.toml
script_to_kg/: pyproject.toml
script_to_kg/evaluation/: evaluate_kgs.py  evaluation_full.json  evaluation_summary.csv  evaluation_summary.xlsx  ~$evaluation_summary.xlsx
script_to_kg/generated_kgs/AutoGen/: L1_Multi-Agent_Conversation_and_Stand-up_Comedy_instances.ttl  L2_Sequential_Chats_and_Customer_Onboarding_instances.ttl  L3_Reflection_and_Blogpost_Writing_instances.ttl  L6-Planning_and_Stock_Report_Generation_instances.ttl
script_to_kg/generated_kgs/CrewAI/: game-builder-crew_instances.ttl  industry-agents_instances.ttl  job-posting_instances.ttl  landing_page_generator_instances.ttl  markdown_validator_instances.ttl  marketing_strategy_instances.ttl  match_profile_to_positions_instances.ttl  meta_quest_knowledge_instances.ttl  prep-for-a-meeting_instances.ttl  recruitment_instances.ttl  screenplay_writer_instances.ttl  starter_template_instances.ttl  stock_analysis_instances.ttl
script_to_kg/generated_kgs/LangGraph/: chat-agent_instances.ttl  email-agent_instances.ttl  open-code_instances.ttl  pizza-orderer_instances.ttl  trip-planner_instances.ttl  writer-agent_instances.ttl
script_to_kg/generated_kgs/Mastra AI/: a2a_instances.ttl  agent1_instances.ttl  agent_instances.ttl  bird-checker-with-express_instances.ttl  bird-checker-with-nextjs-and-eval_instances.ttl  bird-checker-with-nextjs_instances.ttl  crypto-chatbot_instances.ttl  dane_instances.ttl  mcp-registry-registry_instances.ttl  openapi-spec-writer_instances.ttl  quick-start_instances.ttl  stock-price-tool_instances.ttl  travel-app_instances.ttl  weather-agent1_instances.ttl  weather-agent_instances.ttl  workflow-ai-recruiter_instances.ttl  workflow-with-inline-steps_instances.ttl  workflow-with-memory_instances.ttl  workflow-with-separate-steps_instances.ttl  yc-directory_instances.ttl
script_to_kg/ground_truth_scripts/Mastra AI/: agent.ts
script_to_kg/prompts/: baseline.md  framework_specific.md  minimal.md  reasoning.md  structured.md  validation.md
script_to_kg/src/: run_all_experiments.sh  run_experiment.py
(+2626 files in other folders)
