[project]
name = "agento"
version = "0.1.0"
description = "Agentic AI Framework Generator from Knowledge Graphs"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<=3.13"

dependencies = [
    "crewai>=0.152.0",
    "rdflib>=7.0.0",
    "pandas>=2.0.0",
    "autogen-agentchat>=0.4.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
agento = "src.crewai.run:main"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.0.0",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
