[project]
name = "kg_to_script"
version = "0.1.0"
description = "Pipeline to compile semantic Knowledge Graphs into framework-native source code"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai>=0.152.0",
    "rdflib>=7.0.0",
    "pandas>=2.0.0",
    "autogen-agentchat>=0.4.0",
    "python-dotenv>=1.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
