[project]
name = "script_to_kg"
version = "0.1.0"
description = "Pipeline to generate Knowledge Graphs from Multi-Agent framework source code using LLMs"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "google-genai>=0.1.0",
    "google-generativeai>=0.3.0",
    "anthropic>=0.7.0",
    "python-dotenv>=1.0.1",
]
