[project]
name = "unnamed_project"
version = "0.1.0"
description = "A crew composed of multiple LLM agents and tools to plan trips: city selection, "
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<=3.13"

dependencies = [
    "crewai[tools]>=0.152.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    # TODO: add PyPI package for custom tool "SearchTools"
    # TODO: add PyPI package for custom tool "BrowserTools"
    # TODO: add PyPI package for custom tool "CalculatorTools"
]

[project.scripts]
unnamed_project = "main:run"
train      = "main:train"

[tool.uv]
dev-dependencies = []

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
