[project]
name = "unnamed_project"
version = "0.1.0"
description = ""
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<=3.13"

dependencies = [
    "crewai[tools]>=0.152.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "google-generativeai>=0.8.0",
    # TODO: add PyPI package for custom tool "toolstockbroker"
    # TODO: add PyPI package for custom tool "tooltripPlanner"
    # TODO: add PyPI package for custom tool "toolopenCode"
    # TODO: add PyPI package for custom tool "toolorderPizza"
    # TODO: add PyPI package for custom tool "toolwriterAgent"
    # TODO: add PyPI package for custom tool "toolrouter"
]

[project.scripts]
unnamed_project = "main:run"
train      = "main:train"

[tool.uv]
dev-dependencies = []

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
