[project]
name = "mastra_system"
version = "0.1.0"
description = "The system instance that contains agents, workflows, processors, MCP servers, an"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<=3.13"

dependencies = [
    "crewai[tools]>=0.152.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    # TODO: add PyPI package for custom tool "cookingtool"
    # TODO: add PyPI package for custom tool "weatherinfo"
    # TODO: add PyPI package for custom tool "calculator"
    # TODO: add PyPI package for custom tool "fetchWeather"
    # TODO: add PyPI package for custom tool "stringUtils"
    # TODO: add PyPI package for custom tool "greetUser"
    # TODO: add PyPI package for custom tool "collectContactInfo"
]

[project.scripts]
mastra_system = "main:run"
train      = "main:train"

[tool.uv]
dev-dependencies = []

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
