[project]
name = "mastra_application_system"
version = "0.1.0"
description = "Top-level application composition: registers weather workflow and the exported w"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<=3.13"

dependencies = [
    "crewai[tools]>=0.152.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "anthropic>=0.60.0",
    # TODO: add PyPI package for custom tool "getweather"
]

[project.scripts]
mastra_application_system = "main:run"
train      = "main:train"

[tool.uv]
dev-dependencies = []

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
