[project]
name = "mastraagentsystem"
version = "0.1.0"
description = "Collection of agents and tools composing the CLI assistant 'Dane' and associated"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<=3.13"

dependencies = [
    "crewai[tools]>=0.152.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "anthropic>=0.60.0",
    # TODO: add PyPI package for custom tool "execaTool"
    # TODO: add PyPI package for custom tool "fsTool"
    # TODO: add PyPI package for custom tool "mcpSlackClient"
    # TODO: add PyPI package for custom tool "listEvents"
    # TODO: add PyPI package for custom tool "browserTool"
    # TODO: add PyPI package for custom tool "googleSearch"
    # TODO: add PyPI package for custom tool "readPDF"
    # TODO: add PyPI package for custom tool "pnpmBuild"
    # TODO: add PyPI package for custom tool "pnpmChangesetStatus"
    # TODO: add PyPI package for custom tool "pnpmChangesetPublish"
    # TODO: add PyPI package for custom tool "activeDistTag"
]

[project.scripts]
mastraagentsystem = "main:run"
train      = "main:train"

[tool.uv]
dev-dependencies = []

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
