[project]
name = "mastra_system"
version = "0.1.0"
description = "The deployed Mastra system that coordinates agents, tools and workflows for gene"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<=3.13"

dependencies = [
    "crewai[tools]>=0.152.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    # TODO: add PyPI package for custom tool "SiteCrawl"
    # TODO: add PyPI package for custom tool "FirecrawlIntegration"
    # TODO: add PyPI package for custom tool "GenerateSpec"
    # TODO: add PyPI package for custom tool "AddtoGit"
    # TODO: add PyPI package for custom tool "GitHubIntegration"
]

[project.scripts]
mastra_system = "main:run"
train      = "main:train"

[tool.uv]
dev-dependencies = []

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
