[project]
name = "travel_ai_system_mastraexampleapp"
version = "0.1.0"
description = ""
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<=3.13"

dependencies = [
    "crewai[tools]>=0.152.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    # TODO: add PyPI package for custom tool "GetFlightInfosearchFlights"
    # TODO: add PyPI package for custom tool "SearchHotelssearchHotels"
    # TODO: add PyPI package for custom tool "SearchAttractionssearchAttractions"
    # TODO: add PyPI package for custom tool "SearchAirbnbLocationsearchAirbnbLocation"
    # TODO: add PyPI package for custom tool "SearchAirbnbsearchAirbnb"
]

[project.scripts]
travel_ai_system_mastraexampleapp = "main:run"
train      = "main:train"

[tool.uv]
dev-dependencies = []

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
