[project]
name = "unnamed_project"
version = "0.1.0"
description = "Team comprising a code writer and a code executor that collaborate to generate a"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<=3.13"

dependencies = [
    "crewai[tools]>=0.152.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    # TODO: add PyPI package for custom tool "toollocalcliexecutor"
    # TODO: add PyPI package for custom tool "toolgetstockprices"
    # TODO: add PyPI package for custom tool "toolplotstockprices"
]

[project.scripts]
unnamed_project = "main:run"
train      = "main:train"

[tool.uv]
dev-dependencies = []

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
