[project]
name = "unnamed_project"
version = "0.1.0"
description = "Crew.ai based crew that analyses a discussion, turns it into screenplay dialogue"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<=3.13"

dependencies = [
    "crewai[tools]>=0.152.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    # TODO: add PyPI package for custom tool "mistraltool"
    # TODO: add PyPI package for custom tool "togethertool"
    # TODO: add PyPI package for custom tool "anyscaletool"
]

[project.scripts]
unnamed_project = "main:run"
train      = "main:train"

[tool.uv]
dev-dependencies = []

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
