[project]
name = "client_application_vite_react_team"
version = "0.1.0"
description = "Represents the client-side application that coordinates a human user, one or mor"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<=3.13"

dependencies = [
    "crewai[tools]>=0.152.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    # TODO: add PyPI package for custom tool "changeColor"
    # TODO: add PyPI package for custom tool "changeLogoSize"
    # TODO: add PyPI package for custom tool "addPost"
]

[project.scripts]
client_application_vite_react_team = "main:run"
train      = "main:train"

[tool.uv]
dev-dependencies = []

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
