[project]
name = "mastraagenticsystem"
version = "0.1.0"
description = "Top-level system instance that composes agents, workflows, storage and logger us"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<=3.13"

dependencies = [
    "crewai[tools]>=0.152.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    # TODO: add PyPI package for custom tool "LibSQLStorestorage"
    # TODO: add PyPI package for custom tool "LibSQLVectorvectorDBadapter"
]

[project.scripts]
mastraagenticsystem = "main:run"
train      = "main:train"

[tool.uv]
dev-dependencies = []

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
